# box-invert

./: 1  LICENSE  README.md  setup.cfg  smart_invert.py
screenshots/: ugly-white-bg
src/: threshold_labels.py
src/box_invert/: __init__.py  __main__.py  find_contours.py  inversion_filter.py  mouse_callback.py  smart_invert.py
