[metadata]
name = box-invert
version = 0.0.1
author = Dean Poulos
author_email = dean.poulos7@gmail.com
description = Computer Vision tool for advanced image inversion.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deanpoulos/BoxInvert
project_urls =
    Bug Tracker = https://github.com/deanpoulos/BoxInvert/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hello-world = box_invert:smart_invert [numpy, cv2, matplotlib]
